--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/home.css" />
+  <link rel="stylesheet" href="css/home.css" />
   <link rel="icon" href="favicon.ico" />
 </head>
-<script src="../js/home.js" defer></script>
+<script src="js/home.js" defer></script>
 <body>
 
   <!-- Top Bar -->
