--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/home.css" />
+  <link rel="stylesheet" href="css/home.css" />
   <link rel="icon" href="favicon.ico" />
 </head>
-<script src="../js/home.js" defer></script>
+<script src="js/home.js" defer></script>
 <body>
 
   <!-- Top Bar -->
   <div class="topbar">
     <div class="container">
-      <span>Veteran Owned • Licensed & Insured</span>
+      <span>Veteran Owned • Licensed & Insured • BBB</span>
       <a class="phone" href="tel:18066812585">(806) 681‑2585</a>
     </div>
   </div>
@@ -29,7 +29,6 @@
       <a href="home.html" class="brand">Leatherneck Welding LLC</a>
       <nav class="links">
         <a href="home.html" class="active">Home</a>
-
         <div class="dropdown">
           <a href="services.html" class="dropbtn">Services ▾</a>
           <div class="dropdown-content">
@@ -40,7 +39,7 @@
             <a href="other-services.html">Other Services</a>
           </div>
         </div>
-
+        <a href="shop.html">Shop</a>
         <a href="About.html">About</a>
         <a href="gallery.html">Gallery</a>
       </nav>
@@ -78,6 +77,24 @@
         <a class="link" href="other-services.html#fabrication">Learn more ›</a>
       </article>
     </div>
+    <h2 class="section-title">Business Types</h2>
+    <div class="cards">
+      <article class="card residential">
+        <h3>Residential</h3>
+        <p>Custom barndominiums, home shops, and backyard fencing solutions.</p>
+        <a class="link" href="residential.html#barndominiums">Learn more ›</a>
+      </article>
+      <article class="card commercial">
+        <h3>Commercial</h3>
+        <p>Durable steel buildings, shops, business structures built to last, etc.</p>
+        <a class="link" href="commercial.html#buildings">Learn more ›</a>
+      </article>
+      <article class="card agriculture">
+        <h3>Agriculture</h3>
+        <p>Fencing, barns, and ranch infrastructure for farms and livestock.</p>
+        <a class="link" href="agriculture.html#fencing">Learn more ›</a>
+      </article>
+    </div>
   </div>
 </section>
 
@@ -88,7 +105,8 @@
     <!-- LEFT: Text / CTA -->
     <div class="col-text">
       <h1>Crafted with Precision, Built for Generations.</h1>
-      <p>Veteran-owned welding company delivering high-quality barndominiums, metal buildings, and fencing throughout North Texas, Oklahoma, and beyond.</p>
+      <p>At Leatherneck Welding LLC, we’re a veteran-owned company specializing in barndominiums, metal buildings, and fencing throughout North Texas and Oklahoma. Our clients trust us not only for our craftsmanship, but also because we are licensed and insured—giving you peace of mind that your project is in capable, accountable hands.</p>
+      <p>Leatherneck Welding LLC is proud to be a BBB Accredited Business, recognized for our commitment to integrity and customer satisfaction.</p>
       <div class="hero-cta">
         <a class="btn btn-primary" href="contact.html">Get a Free Estimate</a>
         <a class="btn btn-ghost" href="tel:18066812585">Call (806) 681-2585</a>
@@ -101,14 +119,14 @@
         <div class="carousel-viewport">
           <div class="carousel-track">
             <div class="slide">
-              <img src="../folder.images/barndominium1.png" alt="Barndominium exterior with covered porch">
+              <img src="folder.images/barndominium1.png" alt="Barndominium exterior with covered porch">
             </div>
             <div class="slide">
-              <img src="../folder.images/fencing.gate1.png" alt="Steel pipe fencing with custom gate">
+              <img src="folder.images/fencing.gate1.png" alt="Steel pipe fencing with custom gate">
             </div>
             <div class="slide">
               <!-- rename file if needed to remove spaces -->
-              <img src="../folder.images/patio deck rail 1.png" alt="Patio railing with black steel balusters">
+              <img src="folder.images/patio_deck_rail1.png" alt="Patio railing with black steel balusters">
             </div>
           </div>
         </div>
@@ -128,7 +146,7 @@
 <section class="section work-cta">
   <div class="container work-cta-grid">
     <div class="work-image">
-      <img src="../folder.images/texasokla3.PNG" alt="North Texas Service Area">
+      <img src="folder.images/texasokla3.PNG" alt="North Texas Service Area">
     </div>
     <div class="work-text">
       <h2 class="section-title">Where We Work</h2>
@@ -136,6 +154,7 @@
         Leatherneck Welding is a veteran-owned contractor serving North Texas, specializing in custom barndominiums, metal buildings, and ranch fencing. 
         We combine expert craftsmanship with a personalized approach to deliver structures that are built to last.
       </p>
+
       
       <h3>Ready to Build?</h3>
       <p>Tell us about your project and get a clear, detailed estimate.</p>
@@ -161,7 +180,7 @@
         <ul class="list">
           <li><a href="tel:18066812585">(806) 681‑2585</a></li>
           <li><a href="mailto:leads@leatherneckwelding.com">leads@leatherneckwelding.com</a></li>
-          <li>Gainesville, TX 76240</li>
+          <li>P.O. Box 367 Gainesville, TX 76241</li>
           <li>Hours: Mon–Sun, 7:00am–7:00pm</li>
         </ul>
       </div>
